🐛Fix Icon Clipping

--- a/components/Footer/styles.module.css
+++ b/components/Footer/styles.module.css
@@ -25,6 +25,8 @@
 
   transition: all 0.15s ease-in-out;
 
+  overflow: visible;
+
   fill: rgba(255, 255, 255, 0);
 }
 
